src/app/globals.css
@font-face {
  font-family: "Comic Sans MS";
  src: url("/typeface/Comic Sans MS.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Comic Sans MS", sans-serif;
  font-size: 14px;
  line-height: 1.4;
  color: #000000;
  background-color: #ffffff;
  margin: 0;
  padding: 30px;
}

.navigation-layer {
  position: relative;
  z-index: 1001;
}

.content-layer {
}

h1, h2, h3, h4, h5, h6, p, a, button, select, option {
  font-family: "Comic Sans MS", sans-serif;
  font-size: 14px;
  font-weight: normal;
  letter-spacing: 0.4px;
  line-height: 1.4;
  -moz-osx-font-smoothing: grayscale;
}

a {
  color: #000000;
  text-decoration: none;
}

a:visited {
  color: #000000;
}

a:hover {
  color: #000000;
  text-decoration: underline;
}

.logo {
  font-family: "Comic Sans MS", sans-serif;
  font-size: 14px;
  font-weight: normal;
  color: #000000;
  text-decoration: none;
  z-index: 1002;
  position: relative;
}


img {
  max-width: 100%;
  height: auto;
  border: 0;
}

.container {
  max-width: none;
  margin: 0;
  padding: 0;
}

.nav-bar {
  display: grid;
  grid-template-columns: 1fr auto 1fr;
  align-items: center;
  margin-bottom: 60px;
  position: relative;
}

.nav-left {
  justify-self: start;
}

.nav-center-wrapper {
  justify-self: center;
  position: relative;
  transform: none;
  left: auto;
}

.nav-right {
  justify-self: end;
  display: flex;
  align-items: center;
}


.mobile-menu-toggle {
  display: none;
  cursor: pointer;
  justify-self: end;
  z-index: 1002;
  position: relative;
}

.mobile-menu {
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  background: white;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: flex-start;
  gap: 10px;
  z-index: 1000;
  text-align: left;
  padding: 110px 30px 30px 30px;
}

@media (max-width: 1000px) {
  .nav-bar {
    grid-template-columns: auto 1fr auto;
  }
  
  .desktop-nav {
    display: none;
  }
  
  .nav-center-wrapper {
    display: none;
  }
  
  .mobile-menu-toggle {
    display: block;
    justify-self: end;
    grid-column: 3;
  }

  .homepage-image {
    max-width: 100%;
    max-height: 60vh;
  }
  
}

.content-spacing {
  margin-bottom: 20px;
}

.project-item {
  margin-bottom: 0;
  display: block;
  color: inherit;
  text-decoration: none;
}

.project-item:hover {
  color: inherit;
  text-decoration: underline;
}

.gallery-container {
  margin: 60px 0;
}

.gallery-item {
  margin-bottom: 60px;
}

.project-spacing {
  margin-bottom: 60px;
}

.text-gallery-spacing {
  margin-bottom: 2em;
}


.page-content {
  display: block;
  width: 100%;
}


.footer {
  position: fixed;
  bottom: 30px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 1001;
}

.project-footer {
  margin-top: 60px;
  margin-bottom: 10px;
  text-align: center;
}

@media (min-width: 481px) {
  .project-footer {
    position: fixed;
    bottom: 30px;
    left: 50%;
    transform: translateX(-50%);
    z-index: 1001;
    margin: 0;
  }
  
  .page-content + .project-footer {
    position: static;
    margin-top: 60px;
    margin-bottom: 10px;
    left: auto;
    transform: none;
  }
}

.image-feed {
  display: flex;
  flex-direction: column;
  gap: 60px;
  margin-top: 60px;
  width: 100%;
}

.feed-item {
  display: flex;
  flex-direction: column;
  gap: 10px;
}

.feed-image-link {
  display: block;
  text-align: left;
}


.feed-caption {
  margin: 0;
  font-size: 14px;
  line-height: 1.4;
}


.content-width {
  width: 50%;
}

.homepage-layout {
}

.homepage-text {
  display: inline-block;
  width: 300px;
  vertical-align: top;
  margin-right: 40px;
  text-align: left;
  margin-bottom: 60px;
}

.homepage-image {
  height: auto;
  object-fit: contain;
  display: inline-block;
  vertical-align: top;
}

@media (min-width: 1000px) {
  .homepage-layout {
    text-align: center;
  }

  .homepage-image {
    max-width: 600px;
  }
}


@media (max-width: 480px) {
  .content-width {
    width: 100%;
  }
  
  .gallery-image {
    width: 100% !important;
    height: auto !important;
  }
  
  .mobile-menu-toggle img {
    width: 19px !important;
    height: 19px !important;
  }
  
  .footer {
    width: 100vw;
    left: 0;
    transform: none;
    text-align: center;
    padding: 20px 0;
    bottom: 0;
  }
  
  .project-footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100vw;
    text-align: center;
    padding: 20px 0;
    transform: none;
    background-color: #ffffff;
    margin-top: 0;
    margin-bottom: 0;
    z-index: 1001;
  }
  
  .page-content + .project-footer {
    position: static;
    margin-top: 60px;
    padding: 0;
    width: auto;
    left: auto;
    transform: none;
    background-color: transparent;
  }
}

